tests/enum_from/compile_fail/field/path_attribute.stderr
error: expected a list of field names, for example #[enum_from(Source1::VariantA.field_x, Source2::VariantB.field_y)]
  --> tests/enum_from/compile_fail/field/path_attribute.rs:12:9
   |
12 |         #[enum_from] // Should be #[enum_from(Source::Struct.x)]
   |         ^
